<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:elevation="4dp"
    app:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/fridgeItemImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="2dp" />

        <TextView
            android:id="@+id/fridgeItemNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/fridgeItemImageView"
            android:text="@string/productName"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:padding="10dp"
            />

        <TextView
            android:id="@+id/bought"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/fridgeItemImageView"
            android:layout_below="@+id/fridgeItemNameTextView"
            android:text="@string/date_bought"/>
        <TextView
            android:id="@+id/fridgeDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/fridgeItemImageView"
            android:layout_below="@+id/bought"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/date_sample"/>

        <ImageView
            android:id="@+id/fridgeItemDeleteImageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_delete"
            android:padding="10dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="80dp"/>

        <TextView
            android:id="@+id/amountInFridge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="95dp"
            android:layout_marginEnd="170dp"
            android:text="@string/amount" />

        <TextView
            android:id="@+id/fridgeItemAmountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="100dp"
            android:background="@drawable/md_btn_selected_dark"
            android:padding="10dp"
            android:text="@string/numberOfItems"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>
</android.support.v7.widget.CardView>