<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pullToRefreshShop"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <LinearLayout
            android:id="@+id/buttonsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:gravity="center"
            android:background="@color/colorAccent"
            android:elevation="10dp">
            <LinearLayout
                android:id="@+id/browseLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                >
                <ImageButton
                    android:id="@+id/productsButton"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/rounded_button"
                    android:padding="30dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_search_white"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/browse_products"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:padding="5dp"
                    android:background="@drawable/shop_activity_title_shape"/>
            </LinearLayout>

        </LinearLayout>




        <LinearLayout
            android:id="@+id/suggestionsLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorAccent"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bestSellingLinearLayout"
            android:elevation="10dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/horizontalListTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/more_of_what_you_like"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                android:background="@drawable/shop_activity_title_shape"
                android:padding="10dp"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/suggestionRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="8dp"
                android:scrollbars="none" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bestSellingLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            android:background="@color/colorAccent"
            android:elevation="10dp"
            app:layout_constraintBottom_toTopOf="@+id/suggestionsLinearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonsLayout">


            <TextView
                android:id="@+id/bestSellingTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/best_selling"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                android:background="@drawable/shop_activity_title_shape"
                android:padding="10dp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/bestSellingRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="8dp"
                android:scrollbars="none" />

        </LinearLayout>


    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.SwipeRefreshLayout>
