<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    android:backgroundTint="#00FFFFFF"
    tools:context=".control.Activities.ProductInfoActivity">


    <ImageButton
        android:id="@+id/productInfoCloseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:drawable/presence_invisible"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_close" />


    <ImageView
        android:id="@+id/productInfoImageImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#B0FFFFFF"
        android:elevation="4dp"
        android:paddingBottom="4dp"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_product_image" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productInfoImageImageView"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/productInfoNameTextView"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/blank"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/productInfoWeightTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="50dp"
            android:layout_gravity="start"
            android:text="@string/blank"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="normal" />


        <ImageButton
            android:id="@+id/productInfoFavouriteButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/transparent"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/ic_favourite_border" />
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="2dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="#B7B3B3B3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productInfoImageImageView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productInfoImageImageView">

        <TextView
            android:id="@+id/productInfoPriceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/productPrice"
            android:textColor="@color/greenMoney"
            android:textSize="25sp"
            android:textStyle="bold" />


        <ImageButton
            android:id="@+id/productInfoAddToCartButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/colorAccent"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:srcCompat="@drawable/ic_add_to_cart" />

        <TextView
            android:id="@+id/productInfoAvailabilityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/productAvailability"
            android:textSize="20sp"
            android:textStyle="normal" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>